# omnimax

./: .gitignore  .gitmodules  README.md  omnimax  omnimax.nim  omnimax.nimble
omnimax_lang/: omnimax_lang.nim  omnimax_lang.nimble
omnimax_lang/omnimax_lang/lang/buffers/: omnimax_buffers.nim
omnimax_lang/omnimax_lang/lib/buffer/: omnimax_buffer.nim
omnimax_lang/omnimax_lang/lib/buffers/: omnimax_buffer.nim
omnimaxpkg/: CMakeLists.txt  omnitest_tilde.cpp
omnimaxpkg/Static/: CMakeLists.txt.nim  Omni_PROTO.cpp.nim  omnitest_tilde.cpp  wip.cpp
